<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.GrocceryListView"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewCurrentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date"
        android:textAlignment="center"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="215dp"
        android:layout_below="@id/textViewCurrentDate"
        android:layout_marginTop="0dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_grocery_name" />

            <EditText
                android:id="@+id/editTextGroceryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Apples" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_grocery_amount" />

            <EditText
                android:id="@+id/editTextGroceryAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_grocery_price" />

            <EditText
                android:id="@+id/editTextGroceryPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/addGroceryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_addGrocceryElement" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groceriesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="321dp"
        android:layout_below="@id/textViewCurrentDate"
        android:layout_marginTop="209dp" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <Button
        android:id="@+id/saveGroceriesButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/groceriesRecyclerView"
        android:text="@string/button_saveList" />
</RelativeLayout>